# autoware_vision_pilot

./: README.md
Models/: README.md
Models/model_library/AutoSpeed/: README.md
Models/model_library/DomainSeg/: README.md
Models/model_library/EgoLanes/: README.md
Models/model_library/Lite/: README.md
Models/model_library/Scene3D/: README.md
Models/model_library/SceneSeg/: README.md
VisionPilot/Middleware_Recipes/: README.md
VisionPilot/Middleware_Recipes/ROS2/VisionPilot_0.5/: visionpilot.conf
VisionPilot/Middleware_Recipes/Zenoh/: README.md  justfile
VisionPilot/Middleware_Recipes/Zenoh/models/: CMakeLists.txt  autospeed_payload.hpp  run_model.cpp
VisionPilot/Middleware_Recipes/Zenoh/test/: homography.yaml
VisionPilot/Middleware_Recipes/Zenoh/video_pubsub/: CMakeLists.txt  autospeed_subscriber.cpp  video_publisher.cpp
VisionPilot/Middleware_Recipes/common/backends/autospeed/: detection.hpp  onnxruntime_engine.hpp  tensorrt_engine.hpp
VisionPilot/Middleware_Recipes/common/include/: autospeed_visualization_engine.hpp  object_finder.hpp
VisionPilot/Middleware_Recipes/common/visualizers/: autospeed_visualization_engine.cpp
VisionPilot/Production_Releases/0.9/include/speed_planning/: speed_planning.hpp
VisionPilot/Production_Releases/0.9/src/speed_planning/: speed_planning.cpp
VisionPilot/Simulation/: README.md
VisionPilot/Simulation/CARLA/ROS2/src/camera_publisher/camera_publisher/: camera_publisher_node.py
VisionPilot/Simulation/CARLA/ROS2/src/carla_control_publisher/carla_control_publisher/: pub_carla_control_node.py
VisionPilot/Simulation/CARLA/ROS2/src/visionpilot_publisher/include/: visionpilot_publisher_node.hpp
VisionPilot/Simulation/CARLA/ROS2/src/visionpilot_publisher/src/: visionpilot_publisher_node.cpp
VisionPilot/Simulation/SODA.Sim/: README.md
VisionPilot/Simulation/SODA.Sim/ros2_gstreamer/: CMakeLists.txt  README.md  package.xml
VisionPilot/Simulation/SODA.Sim/ros2_gstreamer/include/sodasim_gstreamer/: image_to_gstreamer_node.hpp
VisionPilot/Simulation/SODA.Sim/ros2_gstreamer/src/: image_to_gstreamer_node.cpp
VisionPilot/Simulation/SODA.Sim/scenario/SaveGames/: LevelState_VirtualProvingGround_1.sav
VisionPilot/Simulation/SODA.Sim/scenario/SodaVehicles/: SodaHatchback.json  SodaSportCarCamera.json
