<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeid="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>sodasim_gstreamer</name>
  <version>0.1.0</version>
  <description>Standalone ROS 2 image-to-GStreamer bridge for SodaSim camera topics.</description>
  <maintainer email="devnull@example.com">SodaSim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>gstreamer1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
